@@ -85,6 +85,7 @@ void sqlrconnection_svr::abortAllCursors() {
 	debugPrint("connection",2,"aborting all busy cursors...");
 	#endif
 	for (int32_t i=0; i<cfgfl->getCursors(); i++) {
+printf("cursor %d\n",i);
 		if (cur[i] && cur[i]->busy) {
 
 			#ifdef SERVER_DEBUG
@@ -99,6 +100,7 @@ void sqlrconnection_svr::abortAllCursors() {
 			cur[i]->cleanUpData(true,true);
 			cur[i]->abort();
 		}
+printf("done with cursor %d\n",i);
 	}
 	#ifdef SERVER_DEBUG
 	debugPrint("connection",2,"done aborting all busy cursors");
