@@ -15,6 +15,8 @@
 		exist and runs "select version()" if PQparameterStatus doesn't
 		exist; to get the db version
 	added mysql-5.1 drop-in replacement lib
+	fixed a bug that caused result set data not to be cleaned up before
+		a cursor is reused as a bind cursor
 
 0.39 - removed oracle7 support
 	added OCI_OBJECT to oracle environment init
